<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dialog_title"
                    android:textColor="@color/secondary_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/dialog_subtitle"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/dialog_gender"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:weightSum="2">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cvMale"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="5dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="2dp"
                            app:strokeWidth="2dp">

                            <ImageView
                                android:id="@+id/maleicon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:importantForAccessibility="no"
                                android:src="@drawable/maleicon" />
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cvFemale"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="2dp"
                            app:strokeWidth="2dp">

                            <ImageView
                                android:id="@+id/femaleicon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:importantForAccessibility="no"
                                android:src="@drawable/femaleicon" />
                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/dialog_age"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/send"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/femaleicon" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/dialog_result_title"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>